--- a/to-do-list.html
+++ b/to-do-list.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <h1>To-do list</h1>
-    <div id="list">
-        <form id="task-form">
-            <input id="task-input" name="tarefa" type="text" placeholder="Digite aqui sua tarefa" />
-            <button type="submit">Adicionar</button>
-        </form>
-        <div id="tasks"></div>
+    <div class="container">
+        <h1>To-do list</h1>
+        <div id="list">
+            <form id="task-form">
+                <input id="task-input" name="tarefa" type="text" placeholder="Digite aqui sua tarefa" />
+                <button type="submit">Adicionar</button>
+            </form>
+            <div id="tasks"></div>
+        </div>
     </div>
     <script src="assets/scripts.js"></script>
 </body>
